155351145 : RTL Counter - Customer information in customer listing now aligned to the right in RTL-mode. Also added sr text to customer edit button. 155350541 : Counter RTL and context marketing - Now changing placement of context marketing if page loaded in RTL. Also fixed text alignment in context marketing.

--- a/src/styles/components/_context-marketing.scss
+++ b/src/styles/components/_context-marketing.scss
@@ -36,6 +36,10 @@
             margin-bottom: 0;
             color: $white;
             font-weight: $font-weight-light;
+
+            @at-root [dir='rtl'] & {
+                text-align: right;
+            }
         }
 
         &__close-btn {
